--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,10 @@
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
+    <logo id="log banner" class="main-content" role="logo">
+      <h1>text</h1>
+    </logo>
+    
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
