--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <logo id="log banner" class="main-content" role="logo">
-      <img src="../images/CTSlogo_cropped.png"/><img src="/images/CTSlogo_cropped.png"/><img src="CTSlogo_cropped.png"/>
+      <img src="../img/CTSlogo_cropped.png"/><img src="/img/CTSlogo_cropped.png"/><img src="CTSlogo_cropped.png"/><img src="img/CTSlogo_cropped.png"/>
     </logo>
     
     <header class="page-header" role="banner">
