--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
-    <logo id="log banner" class="main-content" role="logo">
-      <img src="../img/CTSlogo_cropped.png"/><img src="/img/CTSlogo_cropped.png"/><img src="CTSlogo_cropped.png"/><img src="img/CTSlogo_cropped.png"/>
+    <logo id="logo banner" class="main-content" role="banner">
+      <img src="images/CTSlogo_cropped.png"/>
     </logo>
     
     <header class="page-header" role="banner">
