--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <logo id="logo banner" class="main-content" role="banner">
-      <img src="images/CTSlogo_cropped.png"/>
+      <img width="315" src="images/CTSlogo_cropped.png"/>
     </logo>
     
     <header class="page-header" role="banner">
