--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,10 @@ $header-heading-color: #fff !default;
 $header-bg-color: #255f85;
 $header-bg-color-secondary: #f2ebd5;
 
+// Banner
+$banner-heading-color: #fff !default;
+$banner-bg-color: #255f85;
+
 // Text
 $section-headings-color: #384578;
 $body-text-color: #606c71 !default;
